# eve_noice

./: .env.example  .gitignore  Cargo.toml  README.md  Rocket.example.toml  Rocket.toml.example  source.bat
.devcontainer/: Dockerfile  devcontainer.json
migrations/00000000000001_create_users/: down.sql  up.sql
migrations/2019-01-20-125816_wallet_esi/: down.sql  up.sql
migrations/2019-01-22-191014_transaction_queue/: down.sql  up.sql
migrations/2019-06-14-161301_transaction_queue/: down.sql  up.sql
src/: auth.rs  lib.rs  main.rs  schema.rs
src/controllers/: characters.rs  dashboard.rs  mod.rs
src/esi/: mod.rs  wallet.rs
src/models/: complete_transactions.rs  evecharacter.rs  inventory.rs  invtype.rs  mod.rs  transaction_queue.rs  transactions.rs
src/repository/: mod.rs
src/view_models/: characters.rs  dashboard.rs  inventory.rs  mod.rs
src/views/: base.html.tera  macros.html.tera
src/views/characters/: config.html.tera  redirecting.html.tera
src/views/dashboard/: about.html.tera  dashboard.html.tera  index.html.tera  inventory.html.tera
ssl/: certificate.pem  privkey.pem
