[profile.dev]
codegen-units = 4

[package]
name = "hangar"
version = "0.0.1"
authors = ["BlockCat"]

[lib]
name = "hangar"
path = "src/lib.rs"

[[bin]]
name = "hangar_runner"
path = "src/main.rs"

[[test]]
name = "hangar_test"
path = "tests/lib.rs"

[features]
default = ["diesel_sqlite"]
diesel_default = ["diesel/chrono", "diesel/serde_json", "r2d2"]
diesel_sqlite = ["diesel_default", "diesel/sqlite"]

[dependencies]
# openssl-sys = { version = "0.9.23", features = ["vendored"] }
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
dotenv = "0.13.0"
dotenv_codegen = "0.11.0"
separator = "0.4.0"
itertools = "0.8.0"
tera = "0.11.20"
# rocket
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", default-features = false, features = ["json", "tera_templates", "diesel_sqlite_pool", "serve"]}
jwt = "0.4.0"
# database
# valid features are : "postgresql", "mysql", "sqlite"

diesel = { version = "1.4.0", optional = true }
r2d2 = { version = "0.8.3", optional = true }
restson = "0.5.1"

# serialization
serde = "1.0.84"
serde_json = "1.0.36"
serde_derive = "1.0.84"

uuid = { version = "0.7.1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# password encryption + self salting
cookie = "0.11.0"
rand = "0.6.4"
oauth2 = "1.3.0"

# Logging
slog = "2.4.1"
sloggers = "0.3.1"

# Error handling
error-chain = "0.12.0"

# html sanitizer
ammonia = "2.0.0"

[dev-dependencies]
quickcheck = "0.8.0"
stainless = { git = "https://github.com/reem/stainless.git" }
parking_lot = {version = "0.7.1", features = ["nightly"]}
