[profile.dev]
codegen-units = 4

[package]
name = "hangar"
version = "0.0.1"
authors = ["BlockCat"]

[lib]
name = "hangar"
path = "src/lib.rs"

[[bin]]
name = "hangar_runner"
path = "src/main.rs"

[[test]]
name = "hangar_test"
path = "tests/lib.rs"

[features]
default = ["diesel_default", "diesel_mysql"]
diesel_default = ["diesel/chrono", "diesel/serde_json", "r2d2", "rocket/tls"]
diesel_mysql = ["diesel/mysql", "rocket_contrib/diesel_mysql_pool"]

[dependencies]
# openssl-sys = { version = "0.9.23", features = ["vendored"] }
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
dotenv = "0.13.0"
dotenv_codegen = "0.11.0"
separator = "0.4.0"
itertools = "0.8.0"
tera = "0.11.20"
# rocket
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", default-features = false, features = ["json", "tera_templates", "serve"]}
jwt = "0.4.0"
# database
# valid features are : "postgresql", "mysql", "sqlite"

diesel = { version = "1.4.1", optional = true }
r2d2 = { version = "0.8.3", optional = true }
restson = "0.5.1"

# serialization
serde = "1.0.87"
serde_json = "1.0.38"
serde_derive = "1.0.87"

uuid = { version = "0.7.2", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# password encryption + self salting
cookie = "0.11.0"
rand = "0.6.5"
oauth2 = "1.3.0"

# Logging
slog = "2.4.1"
sloggers = "0.3.2"

# Error handling
error-chain = "0.12.0"

# html sanitizer
ammonia = "2.0.0"

[dev-dependencies]
quickcheck = "0.8.1"
stainless = { git = "https://github.com/reem/stainless.git" }
parking_lot = {version = "0.7.1", features = ["nightly"]}
